# pcmsolver

./: .gitignore  .travis.yml
src/ddpcm/: ddcosmo.f90
src/solver/: CMakeLists.txt  ddPCM.cpp  ddPCM.hpp
src/utils/: Molecule.cpp  Molecule.hpp
tests/: CMakeLists.txt
tests/cpcm/: cpcm_gepol-NH3.cpp
tests/ddPCM/: CMakeLists.txt  ddPCM.cpp  ggrid.npy  grid.npy  phi.npy  xi.npy
